<resources>
    <string name="app_name">Quiz App</string>
    <string name="my_name">Enter Your Name</string>
    <string name="line">-----------------</string>
    <string name="question_one"><b>1.</b> On an Ethernet switched network,what address does one host computer use to communicate with another?"</string>
    <string name="choice_one">IP Address</string>
    <string name="choice_two">MAC Address</string>
    <string name="choice_three">Street Address</string>
    <string name="choice_four">HUB Address</string>
    <string name="question_two"><b>2.</b> UTP cables use which type of connector?</string>
    <string name="question_two_choice_one">RJ-11</string>
    <string name="question_two_choice_two">RJ-25</string>
    <string name="question_two_choice_three">RJ-45</string>
    <string name="question_two_choice_four">BCN</string>
    <string name="heading">CompTIA N+ Questions</string>
    <string name="question_three"><b>3.</b> Which of the following supports VLSM,summarization and discontiguos networking? Choose Three).</string>
    <string name="checkbox_one">RIPv1</string>
    <string name="checkbox_two">IGRP</string>
    <string name="checkbox_three">EIGRP</string>
    <string name="checkbox_four">OSPF</string>
    <string name="checkbox_five">BGP</string>
    <string name="checkbox_six">RIPv2</string>
    <string name="question_four"><b>4.</b> Which of the following is <b>NOT</b> a WAN protocol or technology ?</string>
    <string name="question_four_radio_one">ATM</string>
    <string name="question_four_radio_two">ISDN</string>
    <string name="question_four_radio_three">MPLS</string>
    <string name="question_four_radio_four">RIP</string>
    <string name="question_five"><b>5.</b> Which TCP/IP utility is most often used to test whether an IP host is up and functional?</string>
    <string name="question_five_radio_one">ftp</string>
    <string name="question_five_radio_two">telnet</string>
    <string name="question_five_radio_three">ping</string>
    <string name="question_five_radio_four">netstat</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="redo_quiz">Redo Quiz</string>
    <string name="final_results">Your Results</string>
    <string name="feedback"><b>6.</b> How was your quiz experience?</string>
    <string name="good_bad">Good/Bad</string>
</resources>
